--- a/app/src/main/res/layout/activity_notes_add.xml
+++ b/app/src/main/res/layout/activity_notes_add.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".NotesDetails">
+        tools:context=".NotesAdd">
     <ScrollView
             android:layout_width="407dp"
             android:layout_height="722dp"
